--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-typeahead": "^5.1.4",
     "react-datepicker": "^3.5.0",
     "react-dom": "^17.0.1",
     "react-images": "^1.1.7",
